main.css
/* ... */
.top__sellers-section .small__block .user__info {
    margin-left: 16px;
    margin-top: -20px;
}

.top__sellers-section .small__block .number {
    font-family: 'Roboto', sans-serif;
    font-style: normal;
    font-weight: 500;
    font-size: 19px;
    line-height: 44px;
    display: flex;
    align-items: center;
    color: rgba(255, 255, 255, 0.8);
    margin-bottom: 2px;
}

.top__sellers-section .small__block .user__info h4 {
    font-family: 'Roboto', sans-serif;
    font-style: normal;
    font-weight: 500;
    font-size: 19px;
    line-height: 44px;
    color: #FFFFFF;
    margin-left: -3px;
}

.top__sellers-section .small__block .user__info p {
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 500;
    font-size: 14px;
    color: rgba(255, 255, 255, 0.8);
    margin-top: 4px;
    margin-left: 9px;
    position: relative;
}

.top__sellers-section .small__block .user__info p::before {
    position: absolute;
    content: '';
    background-image: url('../oceanNFT/images/Vector_profit.png');
    width: 9px;
    height: 14px;
    background-size: cover;
    left: -12px;
}

.top__sellers-section .small__block .user__profit {
    width: 101px;
    height: 35px;
    background: rgba(0, 179, 71, 0.15);
    border-radius: 17px;
    text-align: center;
    font-family: 'Roboto', sans-serif;
    font-style: normal;
    font-weight: 500;
    font-size: 15px;
    color: #00FF66;
    padding-top: 10px;
    position: absolute;
    top: 51px;
    right: 20px
}

.top__sellers-section .small__block .user__profit {
    background-image: url('../oceanNFT/images/top-sellers-green.png');
    background-size: cover;
}

.top__sellers-section .small__block .user__profit.red {
    background: linear-gradient(180deg, rgba(235, 20, 20, 0.15) 0%, rgba(235, 20, 20, 0.1005) 100%);
    color: #FF0000;
}

.top__sellers-section .small__block .user__profit.red {
    background-image: url('../oceanNFT/images/top-sellers-red.png');
    background-size: cover;
}

.top__sellers-section .explore__btn {
    cursor: pointer;
    text-decoration: none;
    background: linear-gradient(92.23deg, #FF56F6 21.43%, #B936EE 50.63%, #3BACE2 100%, #406AFF 117.04%);
    box-shadow: 0px 5px 117px rgba(255, 86, 246, 0.51);
    backdrop-filter: blur(231px);
    border: 3px solid;
    border-image-source: linear-gradient(272.52deg, #FFA6FA 47.49%, #3C79D5 98.81%);
    border-image-slice: 1;
    font-family: 'Rajdhani', sans-serif;
    font-style: normal;
    font-weight: 600;
    font-size: 20px;
    line-height: 25px;
    text-align: center;
    color: #FFFFFF;
    width: 241px;
    height: 55px;
    margin-left: 14px;
    margin-top: 61px;
    padding-top: 10px;
}

.whatAreNft__setion {
    width: 100%;
    height: 556.37px;
    background-image: url('../oceanNFT/images/whatAreNft.png');
    margin: 158px auto;
    display: flex;
    justify-content: center;
    background-size: cover;
}

.whatAreNft__container {
    position: relative;
    width: 1380px;
}

.whatAreNft__info-block {
    position: absolute;
    top: 216px;
    right: 27px;
    width: 572px;
    height: 433px;
    background: rgba(255, 255, 255, 0.1);
    backdrop-filter: blur(30px) contrast(60%);
    -webkit-backdrop-filter: blur(30px) contrast(60%);
    box-sizing: content-box;
    border-width: 3px;
    border-style: solid;
    border-image: -webkit-linear-gradient(145.77deg, rgba(255, 255, 255, 0.28) 0%, rgba(255, 255, 255, 0) 105.76%);
    border-image-slice: 1;
    padding-bottom: 35px;
}

.whatAreNft__info-block h4 {
    padding: 58px 0px 0px 70px;
    font-family: 'Inter800';
    font-style: normal;
    font-weight: 800;
    font-size: 44.5093px;
    font-feature-settings: 'salt'on, 'liga'off;
}

.whatAreNft__info-block p {
    padding: 22px 30px 0px 70px;
    font-family: 'Inter400';
    font-style: normal;
    font-weight: 400;
    font-size: 20.0292px;
    line-height: 36px;
    font-feature-settings: 'salt'on, 'liga'off;
}

.whatAreNft__bottom-text {
    padding: 47px 0px 0px 70px;
    font-family: 'Inter';
    font-style: normal;
    font-weight: 500;
    font-size: 16px;
    letter-spacing: 1px;
}

.whatAreNft__bottom-text span:last-child {
    margin-left: 62px;
    position: relative;
}

.whatAreNft__bottom-text span:last-child::before {
    position: absolute;
    content: "";
    top: 1px;
    left: -22px;
    background-image: url('../oceanNFT/images/whatAreNft_play-icon.png');
    width: 12.24px;
    height: 17.8px;
}

.subscribe__section {
    margin-top: 136px;
    width: 1380px;
    display: flex;
}

.subscribe-info-block {
    padding-left: 76px;
    padding-top: 31px;
    font-feature-settings: 'salt'on, 'liga'off;
}

.subscribe-info-block h5 {
    font-family: 'Orbitron';
    font-style: normal;
    font-weight: 700;
    font-size: 39.7965px;
    font-feature-settings: 'salt'on, 'liga'off;
}

.subscribe-info-block p {
    margin-top: 29px;
    line-height: 34px;
    font-family: 'Inter400';
    font-style: normal;
    font-weight: 400;
    font-size: 20px;
    letter-spacing: 0px;
    font-feature-settings: 'salt'on, 'liga'off;
}

.subscribe__form {
    margin-top: 50px;
    display: flex;
}

.subscribe-info-block input {
    width: 274.15px;
    height: 53.06px;
    background: #F4F5F7;
    border-radius: 5.5273px 0px 0px 5.5273px;
    border-width: 0px;
    font-family: 'Inter400';
    font-style: normal;
    font-weight: 400;
    font-size: 15.4764px;
    line-height: 27px;
    padding-left: 18px;

}

.subscribe-info-block input::placeholder {
    color: black;
}

.subscribe__button {
    margin-top: 0px;
    margin-left: 6px;
    width: 148px;
    height: 54px;
    border-radius: 0px 5.5273px 5.5273px 0px;
    padding-left: 33px;
    padding-top: 14px;
    letter-spacing: 0.8px;
    font-weight: 400;
}

footer {
    width: 1434px;
    margin: 156px auto 41px;
    padding-right: 95px;
}

.footer__line {
    height: 1px;
    width: 100%;
    background-color: white;
    opacity: 0.2;
}
/* ... */

